--- a/views/admin/usuarios/create.ejs
+++ b/views/admin/usuarios/create.ejs
@@ -10,8 +10,8 @@
             <h2>Criação de Usuário</h2>
         </div>
         <div class="card-body bg-gray">
-            <form action="/users/create" method="POST">
-                <input class="form-control" name="email" type="email" placeholder="email@exemplo.com"><br>
+            <form action="/usuarios/create" method="POST">
+                <input class="form-control" name="usuario" placeholder="Usuário"><br>
                 <input class="form-control" name="password" type="password" placeholder="***********"><br>
                 <button type="submit" class="btn btn-success btn-block">Criar</button>
             </form>
