--- a/views/admin/usuarios/login.ejs
+++ b/views/admin/usuarios/login.ejs
@@ -11,10 +11,10 @@
         <h2 class="loginText">Chutômetro</h2>
         <form action="/authenticate" method="POST">
             <p class="labelText">E-Mail</p>
-            <input name="email" type="text" placeholder="email@exemplo.com"><br>
+            <input name="usuario" type="text" placeholder="email@exemplo.com"><br>
             <p class="labelText">Senha</p>
             <input name="password" type="password" placeholder="***********"><br>
-            <button type="submit" class="btn btnBlue btn-block">Entrar</button>
+            <button type="submit" class="btn btnBlack btn-block">Entrar</button>
         </form>
     </div>
 </body>
