Teste uso de HTML

--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -4,40 +4,15 @@
     </a>
 
     <ul class="navbar-nav mr-auto">
-        <!--
         <li class="nav-item">
-            <a  class="nav-link" href="#">Financeiro</a>
-        </li>
-        -->
-        <!--
-        <li class="nav-item">
-            <a  class="nav-link" href="/orcamentos">Orçamentos</a>
+            <a  class="nav-link" href="#">Campeonatos</a>
         </li>
         <li class="nav-item">
-            <a  class="nav-link" href="/clientes">Clientes</a>
+            <a  class="nav-link" href="#">Ranking</a>
         </li>
         <li class="nav-item">
-            <a  class="nav-link" href="/fornecedores">Fornecedores</a>
+            <a  class="nav-link" href="#">Times</a>
         </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="/produtos">Produtos</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="/categorias">Categorias</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="/unidades">Unidades</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="/estoques">Estoques</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="/estoqueMovimentacoes">Movimentações de Estoques</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="/compras">Compras</a>
-        </li>
-        -->
     </ul>
 
     <ul class="navbar-nav ml-auto">
