--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -1,27 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-dark menuBox">
-    <a class="navbar-brand" href="/">
-        Chutômetro
-    </a>
+<nav class="navbar navbar-toggleable-sm navbar-dark menuBox">
+    <div class="container"></div>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mainNav">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/">Chutômetro</a>
 
-    <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a  class="nav-link" href="#">Campeonatos</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="#">Ranking</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="#">Times</a>
-        </li>
-    </ul>
-
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a  class="nav-link" href="/admin/users">Usuários</a>
-        </li>
-        <li class="nav-item">
-            <a  class="nav-link" href="/logout">Logout</a>
-        </li>
-    </ul>
-
+            <a class="nav-item nav-link" href="/times">Times</a>
+            <a class="nav-item nav-link" href="/admin/users">Usuários</a>
+            <a class="nav-item nav-link" href="/logout">Logout</a>
+        </div>
+    </div>
 </nav>
+
+
+
+    
