Adicionando controllers de Tabelas e Campeonatos

--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -8,7 +8,10 @@
             <a class="nav-item nav-link active" href="/">Chutômetro</a>
 
             <a class="nav-item nav-link" href="/times">Times</a>
+            <a class="nav-item nav-link" href="/campeonatos">Campeonatos</a>
+            <a class="nav-item nav-link" href="/tabelas">Tabelas</a>
             <a class="nav-item nav-link" href="/admin/users">Usuários</a>
+            <a class="nav-item nav-link" href="/admin/users"></a>
             <a class="nav-item nav-link" href="/logout">Logout</a>
         </div>
     </div>
