Instalação do ESLint e configuração

--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -11,7 +11,8 @@
             <a class="nav-item nav-link" href="/campeonatos">Campeonatos</a>
             <a class="nav-item nav-link" href="/tabelas">Tabelas</a>
             <a class="nav-item nav-link" href="/admin/users">Usuários</a>
-            <a class="nav-item nav-link" href="/admin/users"></a>
+            
+            <a class="nav-item nav-link" href="#"></a>
             <a class="nav-item nav-link" href="/logout">Logout</a>
         </div>
     </div>
