--- a/views/admin/usuarios/index.ejs
+++ b/views/admin/usuarios/index.ejs
@@ -1,30 +1,33 @@
 <%- include ('../../partials/header.ejs')%>
-<%- include ('../../partials/navbar.ejs')%>
+<%- include ('../../partials/homeNavbar.ejs')%>
 
 <br>
 <div class="dist">
-    <a class="btn btn-info" href="/">Voltar</a>
+    <a class="btn btn-info btnOrange" href="/">Voltar</a>
 </div>
 <div class="container">
-    <hr>
+
     <h2>Usuários</h2>
-    <hr>
     <a class="btn btn-success" href="/admin/usuarios/create">Criar novo usuário</a>
     <hr>
     <table class="table table-bordered bg-gray">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Login</th>
+                <th>Usuário</th>
+                <th>Time</th>
+                <th>E-mail</th>
                 <th>Status</th>
                 <th>Ações</th>
             </tr>
         </thead>
         <tbody>
-            <% users.forEach(user=>{ %>
+            <% usuarios.forEach(user=>{ %>
                 <tr>
                     <th><%= user.id %></th>
-                    <th><%= user.login %></th>
+                    <th><%= user.usuario %></th>
+                    <th><%= user.timeId %></th>
+                    <th><%= user.email %></th>
                     <th>
                         <% if( user.ativo === true){ %>
                             Ativo
