--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -10,8 +10,8 @@
             <a class="nav-item nav-link" href="/times">Times</a>
             <a class="nav-item nav-link" href="/campeonatos">Campeonatos</a>
             <a class="nav-item nav-link" href="/tabelas">Tabelas</a>
-            <a class="nav-item nav-link" href="/admin/users">Usuários</a>
-            
+            <a class="nav-item nav-link" href="/admin/usuarios">Usuários</a>
+
             <a class="nav-item nav-link" href="#"></a>
             <a class="nav-item nav-link" href="/logout">Logout</a>
         </div>
@@ -20,4 +20,3 @@
 
 
 
-    
