Melhorias nas telas de listagem de usuários e times

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,7 +146,9 @@ label{
 
 .dist{
     text-align:center;
-    width: 10%;
+    width: 20%;
+    display: flex;
+    justify-content: space-around;
 }
 
 /*BARRA DE ROLAGEM*/
