--- a/views/admin/times/index.ejs
+++ b/views/admin/times/index.ejs
@@ -1,14 +1,74 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Times</title>
+<%- include ('../../partials/header.ejs')%>
+<%- include ('../../partials/homeNavbar.ejs')%>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/public/css/styles.css">
-    <link rel="shortcut icon" href="../../public/img/logo.png" type="image/x-icon" />
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-</head>
+<br>
+<div class="dist">
+    <a class="btn btn-info btnOrange" href="/">Voltar</a>
+    <a class="btn btn-success" href="/admin/usuarios/create">Criar novo time</a>
+</div>
+<div class="container">
+    <h2>Times</h2>
+    <hr>
+    <table class="table table-bordered bg-gray">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Time</th>
+                <th>Status</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% times.forEach(time=>{ %>
+                <tr>
+                    <th><%= time.id %></th>
+                    <th><%= time.time %></th>
+                    <th>
+                        <% if( time.ativo === true){ %>
+                            Ativo
+                        <% } else{ %>
+                            <p>Inativo</p>
+                        <% } %>
+                    </th>
+                    <th>
+                        <% if( time.ativo === true){ %>
+                            <form method="POST" action="/usuarios/delete" style="display: inline;" onsubmit="confirmarInativacao(event, this)">
+                                <input type="hidden" name="id" value="<%= time.id %>">
+                                <button class="btn btn-danger">Inativar</button>
+                            </form>
+                        <% } else{ %>
+                            <form method="POST" action="/usuarios/reactivate" style="display: inline;" onsubmit="confirmarAtivacao(event, this)">
+                                <input type="hidden" name="id" value="<%= time.id %>">
+                                <button class="btn btn-dark">Reativar</button>
+                            </form>
+                        <% } %>
+                    </th>
+                </tr>
+            <%}) %>
+        </tbody>
+    </table>
+</div>
+
+<%- include ('../../partials/footer.ejs')%>
+
+<script>
+    function confirmarInativacao(event, form){
+        event.preventDefault();
+        var decision = confirm("Você quer inativar o usuário?");
+        if(decision){
+            form.submit();
+        }else{
+            console.log("Foi um acidente");
+        }
+    }
+
+    function confirmarAtivacao(event, form){
+        event.preventDefault();
+        var decision = confirm("Você quer reativar o usuário?");
+        if(decision){
+            form.submit();
+        }else{
+            console.log("Foi um acidente");
+        }
+    }
+</script>
