--- a/views/admin/usuarios/create.ejs
+++ b/views/admin/usuarios/create.ejs
@@ -9,11 +9,14 @@
         <div class="card-header bg-dark">
             <h2>Criação de Usuário</h2>
         </div>
-        <div class="card-body bg-gray">
+        <div class="card-body bg-orange-total">
             <form action="/usuarios/create" method="POST">
                 <input class="form-control" name="usuario" placeholder="Informe o usuário"><br>
                 <input class="form-control" name="password" type="password" placeholder="Informe a senha"><br>
                 <input class="form-control" name="email" type="email" placeholder="Informe o e-mail"><br>
+                <select>
+
+                </select>
                 <button type="submit" class="btn btn-success btn-block">Criar</button>
             </form>
         </div>
