Página de criação de campeonato

--- a/views/admin/campeonatos/create.ejs
+++ b/views/admin/campeonatos/create.ejs
@@ -7,11 +7,11 @@
     <hr>
     <div class="card mt-5">
         <div class="card-header bg-dark">
-            <h2>Criação de Time</h2>
+            <h2>Criação de Campeonato</h2>
         </div>
         <div class="card-body bg-orange-total">
-            <form action="/times/create" method="POST">
-                <input class="form-control" name="time" placeholder="Informe o nome do time"><br>
+            <form action="/campeonatos/create" method="POST">
+                <input class="form-control" name="campeonato" placeholder="Informe o nome do Campeonato"><br>
                 <br>
                 <button type="submit" class="btn btn-success btn-block">Criar</button>
             </form>
