Alteração nos models

--- a/views/admin/times/index.ejs
+++ b/views/admin/times/index.ejs
@@ -4,8 +4,9 @@
 <br>
 <div class="dist">
     <a class="btn btn-info btnOrange" href="/">Voltar</a>
-    <a class="btn btn-success" href="/admin/usuarios/create">Criar novo time</a>
+    <a class="btn btn-success" href="/admin/times/create">Criar novo time</a>
 </div>
+<%- include ('../../partials/notification.ejs')%>
 <div class="container">
     <h2>Times</h2>
     <hr>
