Listagem de partidas

--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -10,6 +10,7 @@
             <a class="nav-item nav-link" href="/times">Times</a>
             <a class="nav-item nav-link" href="/campeonatos">Campeonatos</a>
             <a class="nav-item nav-link" href="/tabelas">Tabelas</a>
+            <a class="nav-item nav-link" href="/partidas">Partidas</a>
             <a class="nav-item nav-link" href="/admin/usuarios">Usuários</a>
 
             <a class="nav-item nav-link" href="#"></a>
