--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <%- include ("partials/header.ejs") %>
 <%- include ("partials/homenavbar.ejs") %>
 <body class="bodyBox">
-    
+    <div class="card-item">
+        Exemplo
+    </div>
 </body>
 
 <%- include ("partials/footer.ejs") %>
