--- a/views/public/partidas/indexAll.ejs
+++ b/views/public/partidas/indexAll.ejs
@@ -22,8 +22,7 @@
 </div>
 <div class="container">
     <hr>
-    <h2><%= torneio %></h2>
-    <h2><%= rodada %> ª Rodada</h2>
+    <h2>Partidas</h2>
     <hr>
     <table class="table no-border">
         <thead>
