--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -242,7 +242,20 @@ label{
 }
 
 .card-item{
-    background:rgba(252, 111, 18, .8);
+    width: 80%;
+    height: 50px;
+    text-align: center;
+    background:rgba(252, 111, 18, 1);
+    border-radius: 10px;
+    margin-top: 2%;
+    margin-left: 10%;
+    padding: 10px;
+    color: #F4F4F4;
+}
+
+.card-item:hover {
+    background: gold;
+    color: #000;
 }
 
   /* Modal Content/Box */
