Tela de adição de usuário ao campeonato

--- a/views/admin/tabelaPalpites/index.ejs
+++ b/views/admin/tabelaPalpites/index.ejs
@@ -3,12 +3,13 @@
 
 <br>
 <div class="dist">
-    <a class="btn btn-info btnOrange" href="/">Voltar</a>
+    <a class="btn btn-info btnOrange" href="/campeonato-palpites">Voltar</a>
 </div>
 <div class="container">
 
-    <h2>Participantes do Campeonato de Palpites</h2>
-
+    <h2>Participantes do Campeonato de Palpites <%= idCampeonato %></h2>
+    <hr>
+    <a class="btn btn-success" href="/tabela-palpites/add-user">Adicionar participante</a>
     <hr>
     <table class="table table-bordered bg-gray">
         <thead>
