Adição de usuários ao campeoanto de palpites

--- a/views/admin/campeonatoPalpites/index.ejs
+++ b/views/admin/campeonatoPalpites/index.ejs
@@ -26,9 +26,9 @@
                     <th><%= campeonato.apelido %></th>
                     <th>
                         <% if( campeonato.ativo === true){ %>
-                            <form method="POST" action="/tabela-palpites" style="display: inline;" onsubmit="confirmarInativacao(event, this)">
+                            <form method="POST" action="/tabela-palpites" style="display: inline;">
                                 <input type="hidden" id="idCampeonato" name="idCampeonato" value="<%= campeonato.id %>">
-                                <button class="btn btn-success">Adicionar Usuários</button>
+                                <button class="btn btn-success">Ver tabela</button>
                             </form>
                         <% } %>
                     </th>
@@ -39,15 +39,3 @@
 </div>
 
 <%- include ('../../partials/footer.ejs')%>
-
-<script>
-    function confirmarInativacao(event, form){
-        event.preventDefault();
-        var decision = confirm("Deseja adicionar novos participantes?");
-        if(decision){
-            form.submit();
-        }else{
-            console.log("Foi um acidente");
-        }
-    }
-</script>
