Página de listagem de palpites geral

--- a/views/admin/palpites/index.ejs
+++ b/views/admin/palpites/index.ejs
@@ -9,7 +9,7 @@
     <hr>
     <h2>Palpites</h2>
     <hr>
-    <a class="btn btn-success" href="/">Criar novo campeonato</a>
+    <!--<a class="btn btn-success" href="/">Criar novo campeonato</a>-->
     <hr>
     <table class="table table-bordered bg-gray">
         <thead>
