--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,9 @@
     <button class="card-item" onclick="redirecionarCampeonatosDePalpites()">
         Campeonato de Palpites
     </button>
+    <button class="card-item" onclick="redirecionarPalpites()">
+        Palpites
+    </button>
 </body>
 <script>
     function redirecionarCampeonatos(){
@@ -36,6 +39,10 @@
 
     function redirecionarCampeonatosDePalpites(){
         window.location.href = `/campeonato-palpites`;
+    }
+
+    function redirecionarPalpites(){
+        window.location.href = `/palpites`;
     }
 </script>
 
