--- a/views/admin/tabelaPalpites/index.ejs
+++ b/views/admin/tabelaPalpites/index.ejs
@@ -56,13 +56,15 @@
         const campeonatoPalpites = document.getElementById('idCampeonato').value;
         const campeonato = document.getElementById('campeonato').value;
 
-        // window.location.href = `/palpites/${campeonato}/${campeonatoPalpites}/${jogador}/${rodada}/`;
-         alert(
+        window.location.href = `/palpites/${campeonato}/${campeonatoPalpites}/${jogador}/${rodada}/`;
+        /*
+        alert(
             "Jogador: " + jogador + "\n" +
             "Rodada: " + rodada + "\n" +
             "Campeonato de Palpites: " + campeonatoPalpites + "\n" +
             "Campeonato: " + campeonato + "\n"
-         );
+        );
+        */
     }
 </script>
 
